# lsfiles

./: .func.sh  .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  res.txt  setup.cfg  setup.py  setup.py.bak
lsfiles/: __init__.py  _lsfiles.py  _types.py  adapters.py  cli.py  filters.py  old.py
src/: __main__.py  _types.py  adapters.py  filters.py  lsfiles.py
src/old/: func.py  lsfiles copy.py  lsfiles.py  lsfiles_.py
tests/lsfiles/: test_is_leaf.py
