[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["lsfiles"]
defineConstant = { DEBUG = true }
typeshedPath = "/Users/yul/Desktop/Repos/typeshed"
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
executionEnvironments = [{ root = "lsfiles" }]

[tool.mypy]
python_executable = ".venv/bin/python"
python_version = "3.11"
follow_imports = "normal"
pdb = true
show_traceback = true
raise_exceptions = true
custom_typeshed_dir = "/Users/yul/Desktop/Repos/typeshed"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.mccabe]
threshold = 10

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
